# wetbulbPotential

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: stations.yml
docs/wiki/: Architektur.md  Datenquellen.md  Frontend.md  Home.md  Tests.md  Update-Workflow.md
scripts/: download_all_data.ps1  download_all_data.sh  update_data.ps1  update_data.sh
tests/: test_catalog.py  test_database_export.py  test_dwd_golden.py  test_importers.py  test_sync.py  test_visualization.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: manifest.json  wetbulb_processed.sqlite
web/src/: App.tsx  data.ts  sql-js.d.ts  styles.css  types.ts
wetbulb_pipeline/: __init__.py  cli.py  config.py  dash_app.py  database.py  export.py  models.py  psychrometrics.py  site.py  sync.py  visualization.py
wetbulb_pipeline/importers/: __init__.py  dwd.py  nasa.py  noaa.py
