[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wetbulb-potential"
version = "0.1.0"
description = "Wetbulb potential data pipeline and visualization"
requires-python = ">=3.12"
dependencies = [
  "dash",
  "plotly",
  "pyyaml",
  "requests",
  "pydantic",
  "psychrolib",
  "timezonefinder",
  "tzdata",
]

[project.scripts]
wetbulb-pipeline = "wetbulb_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["wetbulb_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
